# colab-ai-coder

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  ROADMAP.md  SETUP_COMPLETE.txt  WELCOME.txt  docker-compose.yml  setup-dev.ps1  setup-dev.sh
.github/workflows/: security.yml  tests.yml
backend/: .env.example  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/routes/: assistant.py  health.py  models.py
backend/tests/: conftest.py  test_assistant.py  test_health.py  test_models.py
docs/: api.md  colab-setup.md
notebooks/: qwen-assistant.ipynb
