[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colab-ai-coder"
version = "0.1.0"
description = "Assistant IA complet pour développement basé sur Qwen-2.5-Coder"
authors = [{name = "Colab AI Coder Team"}]
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "../README.md"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.24.0",
    "peft>=0.7.0",
    "llama-cpp-python>=0.2.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pyright>=1.1.300",
    "pre-commit>=3.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
]

security = [
    "bandit>=1.7.0",
    "semgrep>=1.45.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["E501", "E203"]

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "build", "dist"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
